objects/Recurring_Donation_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Recurring Donation History</relationshipLabel>
        <relationshipName>Recurring_Donation_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Recurring Donation History</label>
    <nameField>
        <displayFormat>RDH-{000000}</displayFormat>
        <label>Recurring Donation History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donation History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>